--- a/samples/patient-demographics-example/bower.json
+++ b/samples/patient-demographics-example/bower.json
@@ -11,7 +11,8 @@
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
     "angular-logger": "^1.4.0",
-    "moment": "^2.17.1"
+    "moment": "^2.17.1",
+    "angularjs-datepicker": "^2.1.9"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
