--- a/samples/patient-demographics-example/bower.json
+++ b/samples/patient-demographics-example/bower.json
@@ -12,7 +12,8 @@
     "angular-touch": "^1.4.0",
     "angular-logger": "^1.4.0",
     "moment": "^2.17.1",
-    "angularjs-datepicker": "^2.1.9"
+    "angularjs-datepicker": "^2.1.9",
+    "angular-ui-mask": "^1.8.7"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
