:pizza: John Papa style guide impl :pizza:

--- a/samples/angular-patient-demographics-example/.jshintrc
+++ b/samples/angular-patient-demographics-example/.jshintrc
@@ -10,6 +10,7 @@
   "strict": true,
   "undef": true,
   "unused": true,
+  "latedef": "nofunc",
   "globals": {
     "angular": false,
     "alert": false
