--- a/samples/patient-demographics-server/pom.xml
+++ b/samples/patient-demographics-server/pom.xml
@@ -45,6 +45,16 @@
             <artifactId>jackson-datatype-jsr310</artifactId>
             <version>2.8.4</version>
         </dependency>
+        <dependency>
+            <groupId>javax.ws.rs</groupId>
+            <artifactId>jsr311-api</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.hubspot.dropwizard</groupId>
+            <artifactId>dropwizard-guicier</artifactId>
+            <version>1.0.0.3</version>
+        </dependency>
     </dependencies>
 
     <build>
