--- a/samples/patient-demographics-server/pom.xml
+++ b/samples/patient-demographics-server/pom.xml
@@ -7,6 +7,18 @@
   <groupId>com.github.goteamepsilon</groupId>
   <artifactId>patientserv</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 
   <parent>
     <groupId>com.hubspot</groupId>
