added in semicolons, we can take them out later but it's a lot easier to understand the code for me as I'm working through development

--- a/samples/react-redux-patient-demographics-example/.eslintrc
+++ b/samples/react-redux-patient-demographics-example/.eslintrc
@@ -20,6 +20,7 @@
   },
   "rules": {
     "key-spacing"          : 0,
+    "semi"                 : [2, "always"],
     "jsx-quotes"           : [2, "prefer-single"],
     "max-len"              : [2, 120, 2],
     "object-curly-spacing" : [2, "always"]
