--- a/samples/react-redux-patient-demographics-example/package.json
+++ b/samples/react-redux-patient-demographics-example/package.json
@@ -95,10 +95,12 @@
     "imports-loader": "^0.7.0",
     "ip": "^1.1.2",
     "json-loader": "^0.5.4",
+    "moment": "^2.17.1",
     "node-sass": "^4.0.0",
     "normalize.css": "^5.0.0",
     "postcss-loader": "^1.1.0",
     "react": "^15.0.0",
+    "react-datepicker": "^0.41.1",
     "react-dom": "^15.0.0",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
