--- a/samples/react-redux-patient-demographics-example/package.json
+++ b/samples/react-redux-patient-demographics-example/package.json
@@ -90,6 +90,7 @@
     "debug": "^2.2.0",
     "extract-text-webpack-plugin": "^1.0.0",
     "file-loader": "^0.9.0",
+    "formsy-react": "^0.19.2",
     "fs-extra": "^1.0.0",
     "html-webpack-plugin": "^2.22.0",
     "imports-loader": "^0.7.0",
