save basic data to store

--- a/samples/react-redux-patient-demographics-example/.eslintrc
+++ b/samples/react-redux-patient-demographics-example/.eslintrc
@@ -30,6 +30,7 @@
     "indent"                         : [0, "always"],
     "jsx-quotes"                     : [2, "prefer-single"],
     "max-len"                        : [2, 120, 2],
-    "comma-spacing"                  : [0, "always"]
+    "comma-spacing"                  : [0, "always"],
+    "react/jsx-no-bind"              : [0, "always"]
   }
 }
