--- a/samples/react-redux-patient-demographics-example/package.json
+++ b/samples/react-redux-patient-demographics-example/package.json
@@ -112,6 +112,7 @@
     "rimraf": "^2.5.4",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
+    "underscore": "^1.8.3",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.14",
     "yargs": "^6.3.0"
